# amabot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  biome.json  fly.toml  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml
.github/workflows/: fly.yml  fly_deploy.yml
cmd/: root.go  run.go
libamabot/: README.md  amabot.go  color.go  decodeuri.go  encodeuri.go  hash.go  help.go  libamabot.go  list.go  main_amabot.go  main_handler.go  pingpong.go  readystatus.go  rho.go  tex.go  uri.go  user.go
libamabot/ghostscript/: ghostscript.go
src/: entity.rs  index.ts  main.rs  mathjax.ts  register.ts  svg2png.ts  transformSvg.ts  util.rs  wasm.d.ts
