[package]
name = "amabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
mathjax_svg = "3.1.0"
poise = "0.5.7"
resvg = "0.36.0"
thiserror = "1.0.50"
tiny-skia = "0.11.2"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.10.1", optional = true }
log = { version = "0.4.20", optional = true }
png = "0.17.10"

[features]
# Read environment variables from the `.env` file
dotenv = ["dotenvy"]
# Output log
logger = ["env_logger", "log"]
# Load font files in the current directory instead of loading system fonts
pwd_font = []

# for the ./Dockerfile
docker = ["logger", "pwd_font"]
# default
default = ["logger"]
