[package]
name = "amabot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
mathjax_svg = "3.2.0"
poise = "0.5.7"
resvg = "0.37.0"
thiserror = "2.0.16"
tiny-skia = "0.11.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.11.8", optional = true }
log = { version = "0.4.28", optional = true }
png = "0.17.16"

[features]
# Read environment variables from the `.env` file
dotenv = ["dotenvy"]
# Output log
logger = ["env_logger", "log"]
# Load font files in the current directory instead of loading system fonts
pwd_font = []

# for development
dev = ["default", "dotenv"]
# for the ./Dockerfile
docker = ["logger", "pwd_font"]
# default
default = ["logger"]
